
2007-08-23  Robert Jordan  <robertj@gmx.net>

	* configure.in: add get|setpriority detection.

Mon Aug 20 15:23:01 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* configure.in: use more symbol renaming fo OSX (bug #82463).

2007-08-20  Jb Evain  <jbevain@novell.com>

	* scripts/smcs.in: use --runtime=moonlight instead of
	forcing MONO_PATH.

Mon Aug 20 12:34:36 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* configure.in: check for gerusage().

Mon Jul 30 17:59:04 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* configure.in: Enable sigaltstack handling check by default to get
	wider testing.

2007-07-26  Jb Evain  <jbevain@novell.com>

	* scripts/smcs.in: use smcs.exe.

2007-07-24  Wade Berrier  <wberrier@novell.com>

	* configure.in: version bump -> 1.2.5

2007-07-17  Jb Evain  <jbevain@novell.com>

	* scripts/Makefile.am: new monolinker script.

2007-07-11  Jb Evain  <jbevain@novell.com>

	* scripts/smcs.in, scripts/Makefile.am: new smcs script.

2007-07-05  Wade Berrier  <wberrier@novell.com>

	* scripts/mono-find-requires.in: add special 64bit case for ia64.
	(rpm used to provide libname as well as libname()(64bit) on ia64, but 
	now it only provides the first.)

2007-06-28  Jonathan Pryor  <jonpryor@vt.edu>

	* configure.in: Add a check for `struct utimbuf'; needed by MonoPosixHelper.

2007-06-15  Wade Berrier  <wberrier@novell.com>

	* scripts/mono-find-requires.in: revert back to using package names
	for .config file dep scanning.  This is because noarch packages can be
	built on either 32 or 64 bit arches, depending on either a 32bit or 64bit
	library, which is wrong.

2007-06-13  Randolph Chung  <tausq@debian.org>

	* configure.in: Add hppa-linux target.
	Contributed under the X11 license (http://bugzilla.ximian.com/show_bug.cgi?id=81866).

2007-06-13  Randolph Chung  <tausq@debian.org>

	* configure.in: Add AM_PROG_AS, needed for handling assembly file
	targets.

2007-06-09  Wade Berrier  <wberrier@novell.com>
