@@ -171,6 +171,23 @@ extern gboolean CreateProcess (const gunichar2 *appname,
 			       gpointer environ, const gunichar2 *cwd,
 			       WapiStartupInfo *startup,
 			       WapiProcessInformation *process_info);
+extern gboolean CreateProcessWithLogonW (const gunichar2 *username,
+					 const gunichar2 *domain,
+					 const gunichar2 *password,
+					 const guint32 logonFlags,
+					 const gunichar2 *appname,
+					 const gunichar2 *cmdline,
+					 WapiSecurityAttributes *process_attrs,
+					 WapiSecurityAttributes *thread_attrs,
+					 gboolean inherit_handles,
+					 guint32 create_flags,
+					 gpointer environ,
+					 const gunichar2 *cwd,
+					 WapiStartupInfo *startup,
+					 WapiProcessInformation *process_info);
+#define LOGON_WITH_PROFILE 0x00000001
+#define LOGON_NETCREDENTIALS_ONLY 0x00000002
+
 extern gpointer GetCurrentProcess (void);
 extern guint32 GetProcessId (gpointer handle);
 extern guint32 GetCurrentProcessId (void);
